tests/invalid/array_without_size.fl
main :: proc () {
  a: []i32;
}
